--- a/docker/nginx/local.conf
+++ b/docker/nginx/local.conf
@@ -6,7 +6,7 @@ server {
     error_log  /var/log/nginx/error_laravel.log;
 	access_log /var/log/nginx/access_laravel.log;
 
-	server_name  laravel.loc www.laravel.loc;
+	server_name  laravel-docker.loc www.laravel-docker.loc;
 
     root /var/www/public;
 
