--- a/app/package.json
+++ b/app/package.json
@@ -24,7 +24,9 @@
         "vue-template-compiler": "^2.6.11"
     },
     "dependencies": {
+        "chart.js": "^2.9.3",
         "laravel-echo": "^1.6.1",
-        "pusher-js": "^5.0.3"
+        "pusher-js": "^5.0.3",
+        "vue-chartjs": "^3.5.0"
     }
 }
