--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -70,6 +70,8 @@ services:
     restart: unless-stopped
     ports:
       - "6080:8080"
+    networks:
+      - app-network
 
 #Docker Networks
 networks:
